[gd_scene load_steps=5 format=2]

[ext_resource path="res://start-assets/enemy.png" type="Texture" id=1]
[ext_resource path="res://Enemy2.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.6667, 26.875 )

[sub_resource type="CircleShape2D" id=2]
radius = 27.0989

[node name="Enemy2" type="KinematicBody2D"]
scale = Vector2( 1.3, 1.3 )
collision_layer = 4
script = ExtResource( 2 )

[node name="EnemySprite2" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
offset = Vector2( 43, 41 )

[node name="EnemyCollision2" type="CollisionShape2D" parent="."]
modulate = Color( 0.823529, 0.0313726, 0.0313726, 1 )
position = Vector2( 11, 11 )
scale = Vector2( 0.45, 0.4 )
shape = SubResource( 1 )

[node name="PlayerHit2" type="Area2D" parent="."]
position = Vector2( 11, 11 )
scale = Vector2( 0.45, 0.45 )

[node name="EnemyBox2" type="CollisionShape2D" parent="PlayerHit2"]
scale = Vector2( 1.05, 0.95 )
shape = SubResource( 2 )

[node name="EnemyHit2" type="Area2D" parent="."]
position = Vector2( 11, 11 )
scale = Vector2( 0.55, 0.55 )

[node name="EnemyBox3" type="CollisionShape2D" parent="EnemyHit2"]
modulate = Color( 0.756863, 0.141176, 0.827451, 1 )
scale = Vector2( 0.95, 0.85 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="area_entered" from="PlayerHit2" to="." method="_on_PlayerHit2_area_entered"]
[connection signal="body_entered" from="EnemyHit2" to="." method="_on_EnemyHit2_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
